--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a nisi culpa pariatur eius libero alias magnam totam accusantium, cupiditate ducimus architecto suscipit modi voluptatibus iure in officia. Voluptas, est.</p>
         </div>
     </div>
 </body>
