--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera [Rama Master]
+            Blog Innovando Procesos constructivos
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
